--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node": "^20.5.0",
+    "nodemon": "^3.0.1",
+    "server.js": "^1.0.0",
+    "uuid": "^3.4.0"
   }
 }
